# cgcnn

./: .gitignore  GNN.ipynb  README.md  create_structure.ps1  pyproject.toml  setup_environment.ps1
data/: atom_embed_config.json  atom_embedding.json  atom_init.json  elements.json  mp-ids-27430.csv
notebooks/: 01_atom_embeddings.ipynb  02_data_download.ipynb  02_graph_building.ipynb  03_graph_visualization.ipynb  04_cgcnn_data_loading.ipynb  05_cgcnn_model.ipynb  06_cgcnn_complete.ipynb  06_cgcnn_training.ipynb  atom_embed_config.json  atom_embedding.json  mp_training_data.json
setup_and_uv/: UV_GUIDE.md  example.py  quick_test.py  test_environment.py
